# data-aggregation

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  error.rs  lib.rs  main.rs  query.rs
src/firestore/: client.rs  metadata.rs  mod.rs
src/processing/: action.rs  category.rs  mod.rs  time.rs
tests/: integration.rs
