[package]
name = "data-aggregation"
version = "0.1.0"
edition = "2024"

[dependencies]
firestore = {version = "0.47.0"}
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
time = { version = "0.3", features = ["parsing", "formatting", "local-offset", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
menu = {git = "https://github.com/rileyhernandez/menu.git"}
dotenv = "0.15.0"
serde_json = "1.0.143"
rustls = { version = "0.23.31", features = ["ring"] }

